--- a/app/src/main/res/layout/fragment_produto.xml
+++ b/app/src/main/res/layout/fragment_produto.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:hint="Nome do produto" />
+            android:hint="Nome" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
