--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="br.edu.up.app.ui.gallery.GalleryFragment"
+        android:name="br.edu.up.app.ui.comparar.CompararFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
