--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -16,48 +16,36 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/LayoutPrimeiroNome"
             android:layout_width="match_parent"
-            android:layout_height="126dp"
+            android:layout_height="254dp"
             android:layout_weight="1">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inputPrimeiroNome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:hint="Nome " />
+            <Spinner
+                android:id="@+id/spinnerCima"
+                android:layout_width="350dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="300dp"
+                android:layout_weight="1" />
 
+            <Spinner
+                android:id="@+id/spinnerBaixo"
+                android:layout_width="350dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="180dp"
+                android:layout_weight="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layoutSegundoNome"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_weight="1">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inputSegundoNome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:hint="Nome " />
-
-        </com.google.android.material.textfield.TextInputLayout>
         <Button
             android:id="@+id/btnComparar"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="10dp"
+            android:background="#000000"
+            android:backgroundTint="#008580"
             android:text="Comparar" />
-
-        <TextView
-            android:id="@+id/textViewComparar"
-            android:layout_width="359dp"
-            android:layout_height="371dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_weight="1" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
