--- a/app/src/main/res/layout/fragment_produto.xml
+++ b/app/src/main/res/layout/fragment_produto.xml
@@ -84,6 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_margin="10dp"
+        android:backgroundTint="#008580"
         android:text="Salvar" />
 
 </LinearLayout>
