--- a/app/src/main/res/layout/fragment_item_produto.xml
+++ b/app/src/main/res/layout/fragment_item_produto.xml
@@ -12,7 +12,7 @@
         android:layout_width="239dp"
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="136dp"
         android:text="Nome"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -24,9 +24,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="296dp"
+        android:layout_marginEnd="300dp"
         android:layout_marginBottom="16dp"
         android:text="Vida"
+        android:textColor="#F44336"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,9 +39,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="340dp"
+        android:layout_marginEnd="344dp"
         android:layout_marginBottom="16dp"
         android:text="HP"
+        android:textColor="#F44336"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +57,7 @@
         android:layout_marginEnd="236dp"
         android:layout_marginBottom="16dp"
         android:text="ATK"
+        android:textColor="#03A9F4"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,6 +72,7 @@
         android:layout_marginEnd="112dp"
         android:layout_marginBottom="16dp"
         android:text="DEF"
+        android:textColor="#FF9800"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +87,7 @@
         android:layout_marginEnd="188dp"
         android:layout_marginBottom="16dp"
         android:text="Força"
+        android:textColor="#2196F3"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,9 +99,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="72dp"
         android:layout_marginBottom="16dp"
         android:text="Defesa"
+        android:textColor="#FF9800"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +116,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="88dp"
         android:text="V"
+        android:textColor="#4CAF50"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -132,6 +139,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="60dp"
         android:text="D"
+        android:textColor="#F44336"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
